project(geocube)
find_library(MATHLIB m)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O2 -g -DWITH_FP -DWITHOUT_MP")
set(CMAKE_EXE_LINKER_FLAGS ${MATHLIB})
set(LIB_SOURCES hilbert.c sort.c quicksort.c tree.c util.c dataset.c norm.c)
add_executable(tree_test tree_test.c ${LIB_SOURCES})
add_executable(external external.c ${LIB_SOURCES})
